Add database backup and export tools with complete data management

--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
     "db:migrate": "tsx migrate.ts",
     "db:create-admin": "tsx server/create-admin.ts",
     "db:clear": "tsx server/clear-database.ts",
+    "db:backup": "tsx server/backup-database.ts",
+    "db:restore": "tsx server/restore-database.ts",
+    "db:restore-force": "tsx server/restore-database.ts --force",
+    "db:export": "tsx server/export-database.ts",
+    "db:list-backups": "tsx server/restore-database.ts --list",
     "setup:openai": "tsx setup-openai-key.ts",
     "test:openai": "tsx test-openai.ts",
     "test:anthropic": "tsx test-anthropic.ts",
