--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
     "@tanstack/react-query": "^5.60.5",
     "@types/axios": "^0.9.36",
     "@types/multer": "^1.4.13",
+    "@vitejs/plugin-react": "^4.3.2",
+    "autoprefixer": "^10.4.20",
     "axios": "^1.10.0",
     "bcryptjs": "^2.4.3",
     "chrono-node": "^2.8.3",
@@ -66,9 +68,11 @@
     "connect-pg-simple": "^10.0.0",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
+    "drizzle-kit": "^0.30.4",
     "drizzle-orm": "^0.39.1",
     "drizzle-zod": "^0.7.0",
     "embla-carousel-react": "^8.6.0",
+    "esbuild": "^0.25.0",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "framer-motion": "^11.13.1",
@@ -83,6 +87,7 @@
     "openai": "^5.5.1",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
+    "postcss": "^8.4.47",
     "postgres": "^3.4.3",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
@@ -93,9 +98,13 @@
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.2",
     "tailwind-merge": "^2.6.0",
+    "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
+    "tsx": "^4.19.1",
     "tw-animate-css": "^1.2.5",
+    "typescript": "5.6.3",
     "vaul": "^1.1.2",
+    "vite": "^5.4.14",
     "wouter": "^3.3.5",
     "ws": "^8.18.0",
     "zod": "^3.24.2",
@@ -116,16 +125,7 @@
     "@types/passport-local": "^1.0.38",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
-    "@types/ws": "^8.5.13",
-    "@vitejs/plugin-react": "^4.3.2",
-    "autoprefixer": "^10.4.20",
-    "drizzle-kit": "^0.30.4",
-    "esbuild": "^0.25.0",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.17",
-    "tsx": "^4.19.1",
-    "typescript": "5.6.3",
-    "vite": "^5.4.14"
+    "@types/ws": "^8.5.13"
   },
   "optionalDependencies": {
     "bufferutil": "^4.0.8"
